--- a/html/css/style.css
+++ b/html/css/style.css
@@ -10,10 +10,15 @@
     background-color: #62AE00!important;
 }
 
-.rounded-pill-bottom{
+.rounded-pill-bottom {
     border-radius: 0px 30px 30px 0px;
 }
 
-.rounded-pill-start{
+.rounded-pill-start {
     border-radius: 30px 0px 0px 30px;
+}
+
+.navbar-toggler {
+    border: inherit!important;
+    padding: inherit!important;
 }
