--- a/html/css/style.css
+++ b/html/css/style.css
@@ -27,3 +27,14 @@
     font-size: 1.25em;
     text-align: right;
 }
+
+/*remove up and down arrows form input type number*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
