Improved categories menu. Now menu in subcategory page shows subcategories

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -28,6 +28,10 @@
     text-align: right;
 }
 
+.menu-item > a {
+    text-decoration: none;
+}
+
 /*remove up and down arrows form input type number*/
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
