--- a/html/css/style.css
+++ b/html/css/style.css
@@ -18,6 +18,10 @@
     border-radius: 30px 0px 0px 30px;
 }
 
+.rounded-pill-home{
+    border-radius: 50px!important;
+}
+
 .navbar-toggler {
     border: inherit!important;
     padding: inherit!important;
