--- a/html/css/style.css
+++ b/html/css/style.css
@@ -14,6 +14,12 @@
     border-radius: 0px 30px 30px 0px;
 }
 
+.btn-primary{
+    background-color: #F9BD69!important;
+    color: #232323!important;
+    border-color: #232323!important;
+}
+
 .rounded-pill-start {
     border-radius: 30px 0px 0px 30px;
 }
