Better style and implementation

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -38,8 +38,8 @@
     text-align: right;
 }
 
-.menu-item > a {
-    text-decoration: none;
+.menu-item {
+    text-decoration: none!important;
 }
 
 .scroll {
