--- a/html/css/style.css
+++ b/html/css/style.css
@@ -38,7 +38,10 @@
     text-align: right;
 }
 
-.menu-item {
+.subcategory-link{
+    display: inline-block!important;
+    width: 100%!important;
+    height: 100%!important;
     text-decoration: none!important;
 }
 
